--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ black = "^23.1.0"
 flake8 = "^6.0.0"
 mypy = "^1.0.0"
 pytest = "^7.2.1"
-pytest-cov = "^4.0.0"
+pytest-cov = "^4.1.0"
 isort = "^5.12.0"
 pyright = "^1.1.320"
 pylint = "^2.17.2"
@@ -55,6 +55,7 @@ files = "bolt11"
 
 
 [tool.pytest.ini_options]
+addopts = "-s --cov=bolt11 --cov-report=xml"
 testpaths = [
   "tests"
 ]
